// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`styleHandler > .steps @icestack/ui case 0 1`] = `
".steps .step-primary+.step-primary::before,.steps .step-primary::after {
      --tw-bg-opacity: 1;
      background-color: rgba(var(--ice-primary) / var(--tw-bg-opacity));
      --tw-text-opacity: 1;
      color: rgba(var(--ice-primary-content) / var(--tw-text-opacity));
    }"
`;

exports[`styleHandler > :hover remove case 0 1`] = `""`;

exports[`styleHandler > :hover remove case 0 revert 1`] = `".a:hover{color:red;}"`;

exports[`styleHandler > :hover remove case 1 1`] = `".b{color:red;}"`;

exports[`styleHandler > :hover remove case 1 revert 1`] = `".b,.a:hover{color:red;}"`;

exports[`styleHandler > add postcss plugins case 0 1`] = `
"/*! tailwindcss v4.3.3 | MIT License | https://tailwindcss.com */
page,.tw-root,wx-root-portal-content,:host {
  --font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue",
      "Noto Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
      "Segoe UI Symbol", "Noto Color Emoji";
  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
      "Courier New", monospace;
  --default-font-family: var(--font-sans);
  --default-mono-font-family: var(--font-mono);
}
view,text,::after,::before {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  border: 0 solid;
}
html,:host {
  line-height: 1.5;
  tab-size: 4;
  font-family: var(--default-font-family, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji");
          font-feature-settings: var(--default-font-feature-settings, normal);
  font-variation-settings: var(--default-font-variation-settings, normal);
}
hr {
  height: 0;
  color: inherit;
  border-top-width: 1px;
}
abbr[title] {
  text-decoration: underline;
          text-decoration: underline dotted;
}
h1,h2,h3,h4,h5,h6 {
  font-size: inherit;
  font-weight: inherit;
}
a {
  color: inherit;
  text-decoration: inherit;
}
b,strong {
  font-weight: bolder;
}
code,kbd,samp,pre {
  font-family: var(--default-mono-font-family, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace);
          font-feature-settings: var(--default-mono-font-feature-settings, normal);
  font-variation-settings: var(--default-mono-font-variation-settings, normal);
  font-size: 1em;
}
small {
  font-size: 80%;
}
sub,sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}
sub {
  bottom: -0.25em;
}
sup {
  top: -0.5em;
}
table {
  text-indent: 0;
  border-color: inherit;
  border-collapse: collapse;
}
:-moz-focusring:not(iframe) {
  outline: auto;
}
progress {
  vertical-align: baseline;
}
summary {
  display: list-item;
}
ol,ul,menu {
  list-style: none;
}
img,svg,video,canvas,audio,iframe,embed,object {
  display: block;
  vertical-align: middle;
}
img,video {
  max-width: 100%;
  height: auto;
}
button,input,select,optgroup,textarea {
  font: inherit;
          font-feature-settings: inherit;
  font-variation-settings: inherit;
  letter-spacing: inherit;
  color: inherit;
  border-radius: 0;
  background-color: transparent;
  opacity: 1;
}
select[multiple] optgroup,select[size] optgroup {
  font-weight: bolder;
}
select[multiple] optgroup option,select[size] optgroup option {
  padding-left: 20px;
}
::-webkit-input-placeholder {
  opacity: 1;
}
::placeholder {
  opacity: 1;
}
@supports (not (-webkit-appearance: -apple-pay-button))  or (contain-intrinsic-size: 1px) {
  ::-webkit-input-placeholder {
    color: currentcolor;
  }
  ::placeholder {
    color: currentcolor;
  }
}
textarea {
  resize: vertical;
}
::-webkit-search-decoration {}
::-webkit-date-and-time-value {
  min-height: 1lh;
  text-align: inherit;
}
::-webkit-datetime-edit {
  display: inline-flex;
}
::-webkit-datetime-edit-fields-wrapper {
  padding: 0;
}
::-webkit-datetime-edit,::-webkit-datetime-edit-year-field,::-webkit-datetime-edit-month-field,::-webkit-datetime-edit-day-field,::-webkit-datetime-edit-hour-field,::-webkit-datetime-edit-minute-field,::-webkit-datetime-edit-second-field,::-webkit-datetime-edit-millisecond-field,::-webkit-datetime-edit-meridiem-field {
  padding-top: 0;
  padding-bottom: 0;
}
::-webkit-calendar-picker-indicator {
  line-height: 1;
}
:-moz-ui-invalid {
  box-shadow: none;
}
button,input[type="button"],input[type="reset"],input[type="submit"] {
          appearance: button;
}
::-webkit-inner-spin-button,::-webkit-outer-spin-button {
  height: auto;
}
  "
`;

exports[`styleHandler > arbitrary values case 0 1`] = `
"._b_n_cnth-child_p3_P_B_cunderline:nth-child(3),.underline {
  text-decoration-line: underline;
}
"
`;

exports[`styleHandler > arbitrary values case 2 1`] = `
".lg_c_b_n_cnth-child_p3_P_B_cfirst-letter_cunderline:nth-child(3):first-letter {
  text-decoration-line: underline;
}
"
`;

exports[`styleHandler > arbitrary values case 3 1`] = `
"._b_n_p_B_cmt-4 p {
  margin-top: 1rem;
}
"
`;

exports[`styleHandler > arbitrary values case 4 1`] = `
"@supports (display: grid) {
  ._b_tsupports_pdisplay_cgrid_P_B_cgrid {
    text-decoration-style: underline;
  }
}
"
`;

exports[`styleHandler > arbitrary values case 5 1`] = `
"@media (any-hover: hover) {
  ._b_tmedia_pany-hover_chover_P_k_n_chover_K_B_copacity-100:focus {
    opacity: 1;
  }
}
"
`;

exports[`styleHandler > arbitrary values case 6 1`] = `
"._b_n__du-count-down_r__r_text_B_c_etext-red-400 .u-count-down__text {
  --tw-text-opacity: 1 !important;
  color: rgba(248, 113, 113, var(--tw-text-opacity)) !important;
}
"
`;

exports[`styleHandler > before,after content case 1`] = `
".after_cml-0_d5::after {
  content: var(--tw-content);
  margin-left: 0.125rem;
}
.after_cml-0::after {
  content: var(--tw-content);
  margin-left: 0;
}
.after_ctext-red-500::after {
  content: var(--tw-content);
  --tw-text-opacity: 1;
  color: rgba(239, 68, 68, var(--tw-text-opacity));
}
.after_ccontent-_b_q_x_q_B::after {
  --tw-content: "*";
  content: var(--tw-content);
}
.after_ccontent-_b_x_B::after {
  --tw-content: *;
  content: var(--tw-content);
}
@media (prefers-color-scheme: dark) {
  .after_cbg-zinc-800 {
    --tw-bg-opacity: 1;
    background-color: rgba(39, 39, 42, var(--tw-bg-opacity));
  }
  .after_cbg-green-500 {
    --tw-bg-opacity: 1;
    background-color: rgba(34, 197, 94, var(--tw-bg-opacity));
  }
}
"
`;

exports[`styleHandler > before:content-['+'] 1`] = `
".before_ccontent-_b_a_u_a_B::before {
    --tw-content: '+';
    content: var(--tw-content)
}"
`;

exports[`styleHandler > css @media case 1`] = `
"@media (min-width: 640px) {
  .sm_ctext-3xl {
    font-size: 60rpx;
    line-height: 72rpx;
  }
}
"
`;

exports[`styleHandler > css @media hover case 0 1`] = `
"
      a {
        color: white;
        background: black;
      }"
`;

exports[`styleHandler > css @media hover case 1 1`] = `""`;

exports[`styleHandler > cssPreflightRange option all 1`] = `"::before,::after{--tw-border-opacity: 1;}"`;

exports[`styleHandler > cssPreflightRange option view 1`] = `"::before,::after{--tw-border-opacity: 1;}"`;

exports[`styleHandler > global variables scope matched case 1`] = `"::before,::after{--tw-:'test'}"`;

exports[`styleHandler > guess css var scoped 1`] = `
"view,text,::before,::after {
      border: 0 solid;
      box-sizing: border-box;
      margin: 0;
      padding: 0;
      --tw-border-spacing-x: 0;
      --tw-border-spacing-y: 0;
      --tw-translate-x: 0;
      --tw-translate-y: 0;
      --tw-rotate: 0;
      --tw-skew-x: 0;
      --tw-skew-y: 0;
      --tw-scale-x: 1;
      --tw-scale-y: 1;
      --tw-pan-x:  ;
      --tw-pan-y:  ;
      --tw-pinch-zoom:  ;
      --tw-scroll-snap-strictness: proximity;
      --tw-gradient-from-position:  ;
      --tw-gradient-via-position:  ;
      --tw-gradient-to-position:  ;
      --tw-ordinal:  ;
      --tw-slashed-zero:  ;
      --tw-numeric-figure:  ;
      --tw-numeric-spacing:  ;
      --tw-numeric-fraction:  ;
      --tw-ring-inset:  ;
      --tw-ring-offset-width: 0px;
      --tw-ring-offset-color: #fff;
      --tw-ring-color: rgba(59, 130, 246, 0.5);
      --tw-ring-offset-shadow: 0 0 rgba(0,0,0,0);
      --tw-ring-shadow: 0 0 rgba(0,0,0,0);
      --tw-shadow: 0 0 rgba(0,0,0,0);
      --tw-shadow-colored: 0 0 rgba(0,0,0,0);
      --tw-blur:  ;
      --tw-brightness:  ;
      --tw-contrast:  ;
      --tw-grayscale:  ;
      --tw-hue-rotate:  ;
      --tw-invert:  ;
      --tw-saturate:  ;
      --tw-sepia:  ;
      --tw-drop-shadow:  ;
      --tw-backdrop-blur:  ;
      --tw-backdrop-brightness:  ;
      --tw-backdrop-contrast:  ;
      --tw-backdrop-grayscale:  ;
      --tw-backdrop-hue-rotate:  ;
      --tw-backdrop-invert:  ;
      --tw-backdrop-opacity:  ;
      --tw-backdrop-saturate:  ;
      --tw-backdrop-sepia:  
  ;}"
`;

exports[`styleHandler > https://github.com/tailwindlabs/tailwindcss/pull/14625/files 1`] = `""`;

exports[`styleHandler > injectAdditionalCssVarScope option true 1`] = `
"
"
`;

exports[`styleHandler > injectAdditionalCssVarScope option true and replace universal 1`] = `
"
"
`;

exports[`styleHandler > injectAdditionalCssVarScope option true isMainChunk false 1`] = `
"
"
`;

exports[`styleHandler > main chunk build error 1`] = `
"view,text,::before,::after {
  border: 0 solid;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  --tw-pan-x: ;
  --tw-pan-y: ;
  --tw-pinch-zoom: ;
  --tw-scroll-snap-strictness: proximity;
  --tw-ordinal: ;
  --tw-slashed-zero: ;
  --tw-numeric-figure: ;
  --tw-numeric-spacing: ;
  --tw-numeric-fraction: ;
  --tw-ring-inset: ;
  --tw-ring-offset-width: 0;
  --tw-ring-offset-color: #fff;
  --tw-ring-color: rgba(59, 130, 246, 0.5);
  --tw-ring-offset-shadow: 0 0 rgba(0,0,0,0);
  --tw-ring-shadow: 0 0 rgba(0,0,0,0);
  --tw-shadow: 0 0 rgba(0,0,0,0);
  --tw-shadow-colored: 0 0 rgba(0,0,0,0);
  --tw-blur: ;
  --tw-brightness: ;
  --tw-contrast: ;
  --tw-grayscale: ;
  --tw-hue-rotate: ;
  --tw-invert: ;
  --tw-saturate: ;
  --tw-sepia: ;
  --tw-drop-shadow: ;
  --tw-backdrop-blur: ;
  --tw-backdrop-brightness: ;
  --tw-backdrop-contrast: ;
  --tw-backdrop-grayscale: ;
  --tw-backdrop-hue-rotate: ;
  --tw-backdrop-invert: ;
  --tw-backdrop-opacity: ;
  --tw-backdrop-saturate: ;
  --tw-backdrop-sepia: ;
  border-width: 0;
  border-style: solid;
  border-color: currentColor;
}

.-m-_l_20px_r_ {
  margin: -20rpx;
}

.-mt-2 {
  margin-top: -0.5rem;
}

.mb-_l_-20px_r_ {
  margin-bottom: -20rpx;
}

.flex {
  display: flex;
}

.grid {
  display: grid;
}

.h-_l_100px_r_ {
  height: 100rpx;
}

.max-h-_l_100px_r_ {
  max-height: 100rpx;
}

.min-h-_l_100px_r_ {
  min-height: 100rpx;
}

.w-_l_300rpx_r_ {
  width: 300rpx;
}

.w-_l_100px_r_ {
  width: 100rpx;
}

.w-32 {
  width: 8rem;
}

.min-w-_l_300rpx_r_ {
  min-width: 300rpx;
}

.max-w-_l_300rpx_r_ {
  max-width: 300rpx;
}

.resize {
  resize: both;
}

.grid-cols-3 {
  grid-template-columns: repeat(3, minmax(0, 1fr));
}

.items-center {
  align-items: center;
}

.justify-center {
  justify-content: center;
}

.space-y-_l_1-dot-6rem_r_>view+view {
  --tw-space-y-reverse: 0;
  margin-top: calc(1.6rem * (1 - var(--tw-space-y-reverse)));
  margin-bottom: calc(1.6rem * var(--tw-space-y-reverse));
}

.divide-x-_l_10px_r_>view+view {
  --tw-divide-x-reverse: 0;
  border-right-width: calc(10rpx * var(--tw-divide-x-reverse));
  border-left-width: calc(10rpx * (1 - var(--tw-divide-x-reverse)));
}

.divide-solid>view+view {
  border-style: solid;
}

.divide-_l__h_010101_r_>view+view {
  --tw-divide-opacity: 1;
  border-color: rgba(1, 1, 1, var(--tw-divide-opacity));
}

.rounded-_l_40px_r_ {
  border-radius: 40rpx;
}

.rounded-md {
  border-radius: 0.375rem;
}

.border-_l_10px_r_ {
  border-width: 10rpx;
}

.border-solid {
  border-style: solid;
}

.border-_l__h_098765_r_ {
  --tw-border-opacity: 1;
  border-color: rgba(9, 135, 101, var(--tw-border-opacity));
}

.border-opacity-_l_0-dot-44_r_ {
  --tw-border-opacity: 0.44;
}

.bg-_l__h_123456_r_,.bg-pink-500 {
  --tw-bg-opacity: 1;
  background-color: rgba(18, 52, 86, var(--tw-bg-opacity));
}

.bg-pink-500 {
  background-color: rgba(236, 72, 153, var(--tw-bg-opacity));
}

.bg-opacity-_l_0-dot-54_r_ {
  --tw-bg-opacity: 0.54;
}

.p-_l_20px_r_ {
  padding: 20rpx;
}

.py-2 {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.text-_l_20px_r_ {
  font-size: 20rpx;
}

.font-semibold {
  font-weight: 600;
}

.leading-_l_0-dot-9_r_ {
  line-height: 0.9;
}

.text-_l__h_dddddd_r_,.text-black {
  --tw-text-opacity: 1;
  color: rgba(0, 0, 0, var(--tw-text-opacity));
}

.text-_l__h_dddddd_r_ {
  color: rgba(221, 221, 221, var(--tw-text-opacity));
}

.text-_l__h_ffffff_r_,.text-white {
  --tw-text-opacity: 1;
  color: rgba(255, 255, 255, var(--tw-text-opacity));
}

.text-opacity-_l_0-dot-19_r_ {
  --tw-text-opacity: 0.19;
}

.ring-4 {
  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4rpx + var(--tw-ring-offset-width)) var(--tw-ring-color);
  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 rgba(0,0,0,0));
}

.ring-pink-300 {
  --tw-ring-opacity: 1;
  --tw-ring-color: rgba(249, 168, 212, var(--tw-ring-opacity));
}
"
`;

exports[`styleHandler > remove zero selector 1`] = `".b,.a:hover{color:red;}"`;

exports[`styleHandler > tailwindcss v2 jit should append view selector 1`] = `"::before,::after{--tw-border-opacity: 1;}"`;

exports[`styleHandler > use with weapp-pandacss case 0  1`] = `"view,text,::before,::after{border: 0 solid;box-sizing: border-box;margin: 0;padding: 0;--tw-border-opacity: 1;}"`;

exports[`styleHandler > use with weapp-pandacss case 1  1`] = `"view,text,::before,::after{border: 0 solid;box-sizing: border-box;margin: 0;padding: 0;--tw-border-opacity: 1;}"`;

exports[`styleHandler > use with weapp-pandacss case 2  1`] = `"view,text,::before,::after{border: 0 solid;box-sizing: border-box;margin: 0;padding: 0;--tw-border-opacity: 1;}"`;

exports[`styleHandler > use with weapp-pandacss case 2.1  1`] = `"view,text,::before,::after{border: 0 solid;box-sizing: border-box;margin: 0;padding: 0;--tw-border-opacity: 1;}"`;

exports[`styleHandler > use with weapp-pandacss case 3  1`] = `"view,text,::before,::after{border: 0 solid;box-sizing: border-box;margin: 0;padding: 0;--tw-border-opacity: 1;}"`;

exports[`styleHandler > use with weapp-pandacss case 4  1`] = `".space-y-4>view+view,.space-y-4>view+text,.space-y-4>text+view,.space-y-4>text+text{--tw-border-opacity: 1;}"`;

exports[`styleHandler > utf8 charset 1`] = `
".after_ccontent-_b_au_x6211_u_x662f_u_x4f2a_u_x5143_u_x7d20__a_B::after {
    --tw-content: '我是伪元素';
    content: var(--tw-content)
}"
`;
